<resources>
    <string name="alt_app_label"></string>
    <string name="app_name">com.cortxt.app.MMC.MMCApplication</string>
    <string name="MMC_URL_WIN">http://mymobilecoverage.com/</string>
    <string name="MMC_URL_CLOUD">http://d1l72qawknwf5q.cloudfront.net</string>
    <string name="progress_step1of3">Step 1 of 3</string>
    <string name="progress_step2of3">Step 2 of 3</string>
    <string name="progress_step3of3">Step 3 of 3</string>
    <string name="share_title">Share</string>
    <string name="share_error">Could not get screenshot because there is no external storage present</string>
    <string name="sharemessage_mycoverage">Check out the coverage performance on @CARRIERHANDLE from #MyMobileCoverage free app!</string>
    <string name="sharemessage_nerdmode">Everything a phone geek could want to know about @CARRIERHANDLE from #MyMobileCoverage!</string>
    <string name="sharemessage_eventdetail_droppedcall">Dropped a @CARRIERHANDLE call and my #MyMobileCoverage app has the data to troubleshoot the problem.</string>
    <string name="sharemessage_eventdetail_failedcall">Failed call on @CARRIERHANDLE and my #MyMobileCoverage app has the data to troubleshoot the problem.</string>
    <string name="sharemessage_eventdetail_event">%s on @CARRIERHANDLE and my #MyMobileCoverage app is sending them the data.</string>
    <string name="sharemessage_troublespot_droppedcall">Just dropped a @CARRIERHANDLE call and #MyMobileCoverage app has the data to troubleshoot the problem.</string>
    <string name="sharemessage_troublespot_failedcall">Just had a failed call on @CARRIERHANDLE and #MyMobileCoverage app has the data to troubleshoot the problem.</string>
    <string name="sharemessage_troublespot_datasession">Ugh! Poor data service @CARRIERHANDLE. Thanks for catching it, #MyMobileCoverage!</string>
    <string name="sharemessage_troublespot_coverage">Coverage problem on @CARRIERHANDLE. Thanks for catching it, #MyMobileCoverage is sending the issue to @CARRIERHANDLE</string>
    <string name="sharemessage_speedtest_goodspeed">Check out my data speed on @CARRIERHANDLE. #MyMobileCoverage just clocked them. Pretty quick, @CARRIERHANDLE :)</string>
    <string name="sharemessage_speedtest_poorspeed">Check out my data speed on @CARRIERHANDLE. #MyMobileCoverage just clocked them. Get the lead out, @CARRIERHANDLE :)</string>
    <string name="sharemessage_speedtest_wifi">Check out my WiFi data speed. #MyMobileCoverage just clocked it. </string>
    <string name="sharemessage_speedtest_wimax">Check out my WiMAX data speed. #MyMobileCoverage just clocked it. </string>
    <string name="sharemessage_mystats_downloadspeed_good">Check out my data speeds on @CARRIERHANDLE using #MyMobileCoverage. Not too shabby, @CARRIERHANDLE :)</string>
    <string name="sharemessage_mystats_downloadspeed_poor">Check out my data speeds on @CARRIERHANDLE using #MyMobileCoverage. Speed it up, @CARRIERHANDLE :)</string>
    <string name="sharemessage_mystats_mycalls">Check out my call stats on @CARRIERHANDLE using #MyMobileCoverage.</string>
    <string name="sharemessage_mystats_calls_more">Check out my call stats on @CARRIERHANDLE using #MyMobileCoverage. Not too bad, @CARRIERHANDLE :)</string>
    <string name="sharemessage_mystats_calls_less">Check out my call stats on @CARRIERHANDLE using #MyMobileCoverage. Step it up, @CARRIERHANDLE :)</string>
    <string name="sharemessagesubject_mycoverage">Coverage map on @CARRIERHANDLE</string>
    <string name="sharemessagesubject_nerdmode">Network info on @CARRIERHANDLE</string>
    <string name="sharemessagesubject_mystats">Call stats on @CARRIERHANDLE</string>
    <string name="sharemessagesubject_speedtest">Speed test on @CARRIERHANDLE</string>
    <string name="sharemessagesubject_dataspeeds">Speed tests on @CARRIERHANDLE</string>
    <string name="sharemessagesubject_callstats">Speed tests on @CARRIERHANDLE</string>
    <string name="sharemessagesubject_speedtestwifi">Speed test on WiFi</string>
    <string name="sharemessagesubject_speedtestwimax">Speed test on WiMAX</string>
    <string name="sharemessagesubject_eventdetail_droppedcall">Dropped call on @CARRIERHANDLE</string>
    <string name="sharemessagesubject_eventdetail_failedcall">Failed call on @CARRIERHANDLE</string>
    <string name="sharemessagesubject_troublespot_droppedcall">Dropped call on @CARRIERHANDLE</string>
    <string name="sharemessagesubject_troublespot_failedcall">Failed call on @CARRIERHANDLE</string>
    <string name="sharemessagesubject_troublespot_datasession">Data problem on @CARRIERHANDLE</string>
    <string name="sharemessagesubject_troublespot_coverage">Coverage problem on @CARRIERHANDLE</string>
    <string name="sharemessagesubject_eventdetail_event">%s on @CARRIERHANDLE</string>
    <string name="sharemessagesubject_rankings">Carrier rankings including my carrier @CARRIERHANDLE</string>
    <string name="sharemessage_rankings">Check out Carrier Rankings on #MyMobileCoverage app.  See how your carrier stacks up against others in your area!</string>
    <string name="eventtype_droppedcall">Dropped Call</string>
    <string name="eventtype_failedcall">Failed Call</string>
    <string name="eventtype_lostservice">Lost Service</string>
    <string name="eventtype_regainedservice">Regained Service</string>
    <string name="eventtype_lost2g">Lost 2G</string>
    <string name="eventtype_gain2g">Regained 2G</string>
    <string name="eventtype_lost3g">Lost 3G</string>
    <string name="eventtype_gain3g">Regained 3G</string>
    <string name="eventtype_lost4g">Lost 4G</string>
    <string name="eventtype_gain4g">Regained 4G</string>
    <string name="eventtype_lostLTE">Lost LTE</string>
    <string name="eventtype_gainLTE">Regained LTE</string>
    <string name="eventtype_connectcall">Phone Call</string>
    <string name="eventtype_disconnectcall">Disconnect</string>
    <string name="eventtype_unansweredcall">Unanswered</string>
    <string name="eventtype_update">Update</string>
    <string name="eventtype_fillin">Fill-in</string>
    <string name="eventtype_periscope">Periscope</string>
    <string name="eventtype_track">Recording</string>
    <string name="eventtype_netchange">Net change</string>
    <string name="eventtype_regainedsignal">Regained Signal</string>
    <string name="eventtype_dataDisc">Data Disconnected</string>
    <string name="eventtype_dataConn">Data Connected</string>
    <string name="eventtype_manPlottig">Building survey</string>
    <string name="eventtype_monitorAps">Passive Speedtest</string>
    <string name="eventtype_smsTest">SMS Test</string>
    <string name="eventtype_latencyTest">Connection Test</string>
    <string name="eventtype_webpageTest">Webpage Test</string>
    <string name="eventtype_videoTest">Video Test</string>
    <string name="eventtype_audioTest">Audio Test</string>
    <string name="eventtype_manTransit">Transit</string>
    <string name="eventtype_vqcall">VQ Test Call</string>
    <string name="eventtype_youtubeTest">YouTube Test</string>
    <string name="eventtype_lowsignal">Low Signal</string>
    <string name="eventtype_openwifi">Open Wifi</string>
    <string name="eventtype_securewifi">Secure Wifi</string>
    <string name="getstarted_learn">Learn about MMC</string>
    <string name="getstarted_gettingstarted">Getting Started</string>
    <string name="getstarted_visitwebsite">Visit Web Site</string>
    <string name="getstarted_next">Next</string>
    <string name="getstarted_enteremail">Please register or login with your valid email address</string>
    <string name="getstarted_continue">Continue</string>
    <string name="getstarted_acceptterms">Accept terms and conditions</string>
    <string name="getstarted_privacy_message">MyMobileCoverage respects your privacy and will share your coverage data only with your wireless provider. Your personal data will not be shared with any third party.</string>
    <string name="getstarted_heart">my mobile coverage logo heart</string>
    <string name="getstarted_thankyou">Thank you</string>
    <string name="getstarted_completed_message">Your password has been emailed to you. You can use this password and your email to log into\nwww.mymobilecoverage.com\nfrom your desktop browser</string>
    <string name="Settings_StartOnBoot">Start on boot</string>
    <string name="Settings_DaysToKeepEntries">Days to keep data for</string>
    <string name="GenericText_VoiceQuality">Voice Quality</string>
    <string name="GenericText_History">History</string>
    <string name="GenericText_Update">Update event</string>
    <string name="GenericText_SMSTest">SMS Test</string>
    <string name="GenericText_ColdReset">GPS cold start</string>
    <string name="Settings_PassiveSpeedtest">Allow passive speed tests</string>
    <string name="Settings_EnableDataWhenRoaming">Send data when roaming</string>
    <string name="Settings_SendDataOnWifi">Send data only on WiFi</string>
    <string name="Settings_AlwaysShowIcon">Always show top icon</string>
    <string name="Settings_AlwaysShowIcon_Summary">Keeps the notification icon at the top of the screen whether it is idle or active</string>
    <string name="Settings_AutoSpeed_Enable">Automatic speed tests</string>
    <string name="Settings_AutoSpeed_Summary">Automatically run limited speed tests in areas needing measurements. Set Monthly MB limit below.</string>
    <string name="Settings_AutoSpeedMB">Monthly MB Limit </string>
    <string name="Settings_AutoSpeedMB_Summary">Automatic speed tests are limited to a few tests per day, up to a set limit of MB per month</string>
    <string name="Settings_Map">Map</string>
    <string name="Settings_TravelDetect">Passive Scanning Mode</string>
    <string name="Settings_TravelDetectSummary">Level of activity needed while sleeping for effective coverage periscoping</string>
    <string name="Settings_UsageProfile">Level of reporting</string>
    <string name="Settings_UsageProfileCharger">Level when charging</string>
    <string name="Settings_UsageProfileSummaryCharger">level of coverage reporting when on battery charger</string>
    <string name="Settings_Map_Filters">Filters</string>
    <string name="Settings_Map_DroppedCall">Dropped/Failed calls</string>
    <string name="Settings_Map_LostVoiceCoverage">Service outages</string>
    <string name="Settings_Map_Lost3G">Data outages</string>
    <string name="Settings_ContactEmail">Contact Email</string>
    <string name="Settings_ContactEmail_Summary">You may change the email used to send raw data or password resets to, but this will not affect your login.</string>
    <string name="Settings_Twitter">Twitter Username</string>
    <string name="Settings_RootAccess">Root Access</string>
    <string name="Settings_Twitter_Summary">(optional) By providing your Twitter username, you enable your carrier to see your Trouble Tweet and fix your problem!</string>
    <string name="Settings_ServiceMode">Raw Radio Access</string>
    <string name="Settings_ServiceMode_summary">Rooted Samsung devices can provide deeper radio information by enabling system mode for certain events</string>
    <string name="Settings_Svcmode_Basic">Basic Information</string>
    <string name="Settings_Svcmode_Basic_summary">Read from the basic page to get extra info on cell, band, signal and channels</string>
    <string name="Settings_Svcmode_Neighbors">Neighbors</string>
    <string name="Settings_Svcmode_Neighbors_summary">Include the Neighbor cells page in the rotation </string>
    <string name="Settings_Svcmode_MM">MM Information</string>
    <string name="Settings_Svcmode_MM_summary">Include the Mobile Management page in the rotation</string>
    <string name="Settings_Svcmode_Panel">Show Details Panel</string>
    <string name="Settings_GsmHeartbeat">Remote Test Watchdog</string>
    <string name="Settings_GsmHeartbeatDesc">Increases Reliability in receiving Remote Tests (uses more battery) </string>
    <string name="app_usage">App Usage</string>
</resources>