<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
android:layout_width="fill_parent"
android:layout_height="fill_parent"
android:orientation="vertical"
android:gravity="center"
android:background="@drawable/background">
	<ImageView
	android:layout_width="wrap_content"
	android:layout_height="wrap_content"
	android:src="@drawable/processbar1"
	android:contentDescription="@string/progress_step1of3"
	android:layout_gravity="center_horizontal"
	android:padding="30dp"/>

	<TextView
	android:layout_width="wrap_content"
	android:layout_height="wrap_content"
	android:text="@string/getstarted_learn"
	android:textSize="21sp"
	android:textStyle="bold"
	android:textColor="@color/white"
	android:layout_gravity="center_horizontal"
	android:layout_weight="1"/>
	
	<LinearLayout
	android:layout_width="240dp"
	android:layout_height="wrap_content"
	android:orientation="vertical"
	android:layout_weight="1">
	    <Button
	    android:layout_width="fill_parent"
	    android:layout_height="wrap_content"
	    android:text="@string/getstarted_gettingstarted"
	    android:onClick="gettingStartedClicked"/>
	    <Button
	    android:layout_width="fill_parent"
	    android:layout_height="wrap_content"
	    android:text="@string/getstarted_visitwebsite"
	    android:onClick="visitWebsiteClicked"/>
	</LinearLayout>
	
	<LinearLayout
	android:layout_width="fill_parent"
	android:layout_height="wrap_content"
	android:orientation="vertical"
	android:layout_weight="1">
		<Button
		android:layout_width="90dp"
		android:layout_height="wrap_content"
		android:layout_gravity="center_horizontal"
		android:text="@string/getstarted_next"
		android:onClick="skipClicked"/>
	</LinearLayout>
	
</LinearLayout>