<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
android:layout_width="fill_parent"
android:layout_height="fill_parent"
android:orientation="vertical"
android:gravity="center"
android:background="@drawable/background">
	<ImageView
	android:layout_width="wrap_content"
	android:layout_height="wrap_content"
	android:src="@drawable/processbar2"
	android:contentDescription="@string/progress_step2of3"
	android:layout_gravity="center_horizontal"
	android:padding="30dp"/>

	<TextView
	android:layout_width="240dp"
	android:layout_height="wrap_content"
	android:text="@string/getstarted_enteremail"
	android:textSize="15sp"
	android:textStyle="bold"
	android:textColor="@color/white"
	android:layout_gravity="center_horizontal"
	android:gravity="center_horizontal"
	android:layout_weight="1"/>
	
	<LinearLayout
	android:layout_width="240dp"
	android:layout_height="wrap_content"
	android:orientation="vertical"
	android:layout_weight="1">
	    <EditText
        android:id="@+id/getstarted2_TextEmail"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:inputType="textEmailAddress">
        <requestFocus />
    	</EditText>
    	
	    <CheckBox
        android:id="@+id/getstarted2_CheckBoxAcceptTerms"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/getstarted_acceptterms"
        android:textSize="13sp"/>
	    
	    <TextView
	    android:layout_width="fill_parent"
	    android:layout_height="wrap_content"
	    android:text="@string/getstarted_privacy_message"
	    android:textColor="@color/gray"/>
	    
	    <TextView
	    android:id="@+id/getstarted2_TextViewPolicyLinks"
	    android:layout_width="fill_parent"
	    android:layout_height="wrap_content"
	    android:textColor="@color/gray"/>
	</LinearLayout>
	
	<LinearLayout
	android:layout_width="fill_parent"
	android:layout_height="wrap_content"
	android:orientation="vertical"
	android:layout_weight="1">
		<Button
		android:layout_width="90dp"
		android:layout_height="wrap_content"
		android:layout_gravity="center_horizontal"
		android:text="@string/getstarted_continue"
		android:onClick="registerClicked"/>
	</LinearLayout>
	
</LinearLayout>